Fixed the buttons layout issue.
Also made the forms submit on keyboard enter.

--- a/src/app/auth/components/login/login.component.scss
+++ b/src/app/auth/components/login/login.component.scss
@@ -19,6 +19,10 @@
         margin-right: 5px;
       }
     }
+    &__submit-btn-wrap {
+      display: flex;
+      justify-content: flex-end;
+    }
     &__button {
       margin-top: 2.2rem;
       color:white;
